transfer learning models

--- a/main_copy_laura.ipynb
+++ b/main_copy_laura.ipynb
@@ -643,6 +643,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e96b35df",
+   "metadata": {},
+   "source": [
+    "# Attempting a different strategy for CNN from scratch\n",
+    "\n",
+    "For the second model, I added a batch normalisation layer between the Conv2D layer and its activation. The normalisation smooths out the learning curves.\n",
+    "\n",
+    "I also replaced the Flatten layer with a GlobalAveragePooling2D layer to reduce the number of params going into the final Dense classification layers. This tends to improve generalisation and prevent overfitting, while also reducing parametres going into the dense layers. Instead of passing the full spatial map to the dense layers, GAP provides the final layers more information about the features that the convolutional layers extracted."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 119,
    "id": "b20cd332",
@@ -1098,14 +1110,6 @@
     "plt.yticks(rotation=0)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e634827",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
